# saturn

./: .clang-format  .gitignore  CMakeLists.txt
examples/simple/: CMakeLists.txt  main.cpp
include/saturn/: saturn.h
include/saturn/ecs/: component.hpp  ecs.h  ecs.hpp  ecs_core.hpp  ecs_types.h  entity.hpp  query.hpp  stage.h  system.hpp  trait_helpers.h  universe.hpp  world.hpp
include/saturn/ecs/utils/: component_pool.hpp
include/saturn/window/: window.h
src/ecs/: ecs.cpp  ecs_core.cpp
src/window/: window.cpp
tests/: CMakeLists.txt
tests/ecs/: component.test.cpp  entity.test.cpp  query.test.cpp  system.test.cpp  universe.test.cpp  world.test.cpp
